--- a/views/admin/partials/search.view.ejs
+++ b/views/admin/partials/search.view.ejs
@@ -7,9 +7,12 @@
       placeholder="<%= placeholder  %>"
       class="form-control input-search"
     />
-    <div class="input-group-append">
+    <div class="input-group-append btn-group">
       <button type="submit" class="btn btn-primary btn-search">
         <i class="bi bi-search"></i>
+      </button>
+      <button type="button" class="btn btn-primary btn-remove-search">
+        <i class="bi bi-eraser"></i>
       </button>
     </div>
   </div>
