--- a/views/admin/partials/barChart.view.ejs
+++ b/views/admin/partials/barChart.view.ejs
@@ -1,6 +1,7 @@
-<div class="d-none" id="bar-chart-name"><%= name %></div>
-<div class="d-none" id="bar-chart-labels"><%= labels %></div>
-<div class="d-none" id="bar-chart-data"><%= data %></div>
+<div class="d-none" id="bar-chart-name" data-value="<%= name %>"></div>
+<div class="d-none" id="bar-chart-labels" data-value="<%= labels %>"></div>
+<div class="d-none" id="bar-chart-axis" data-value="<%= axis ? 'x' : 'y' %>"></div>
+<div class="d-none" id="bar-chart-data" data-value="<%= data %>"><%= data %></div>
 <div class="chart-container" style="width: 100%; height: 400px">
   <canvas id="bar-chart"></canvas>
 </div>
